syntax = "proto3";

package envoy.admin.v2alpha;

option java_outer_classname = "HotRestartProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.admin.v2alpha";

import "envoy/admin/v2alpha/metrics.proto";

message HotRestartMessage {
  // Child->parent requests
  message PassListenSocketRequest {
    string address = 1;
  }
  message ShutdownAdminRequest {
  }
  message StatsRequest {
  }
  message DrainListenersRequest {
  }
  message TerminateRequest {
  }

  // Parent->child replies
  message PassListenSocketReply {
    int32 fd = 1;
  }
  message ShutdownAdminReply {
    uint64 original_start_time = 1;
  }
  message StatsReply {
    repeated SimpleMetric stats = 1;
    // TODO(fredlas) temporary within this PR:
    uint64 memory_allocated = 2;
    uint64 num_connections = 3;
  }

  // Child->parent requests
  oneof request {
    PassListenSocketRequest pass_listen_socket_request = 1;
    ShutdownAdminRequest shutdown_admin_request = 2;
    StatsRequest stats_request = 3;
    DrainListenersRequest drain_listeners_request = 4;
    TerminateRequest terminate_request = 5;
  }

  // Parent->child replies
  oneof reply {
    //
    // When this oneof is of the PassListenSocketReply type, there is a special
    // implied meaning: the recvmsg that got this proto has control data to make
    // the passing of the fd work, so make use of CMSG_SPACE etc.
    PassListenSocketReply pass_listen_socket_reply = 6;
    ShutdownAdminReply shutdown_admin_reply = 7;
    StatsReply stats_reply = 8;
  }
  bool didnt_recognize_your_last_message = 9;
}
